syntax = "proto3";

package notification_service;

// Message for acknowledging notifications
message NotificationAck {
  string id = 1;
  string created_at = 2;
}

// Message for the entity associated with the notification
message Entity {
  string id = 1;
  string type = 2;
  string data = 3;  // JSON data as string
}

// Structure of a notification payload
message NotificationPayload {
  string id = 1;
  string category = 2;
  string title = 3;
  string body = 4;
  bool show = 5;
  string created_at = 6; // UTC Datetime String
  string ttl = 7; // UTC Datetime String
  Entity entity = 8;
}

// Notification service with a single Bi-directional RPC method
service Notification {
  // The RPC method for streaming notifications based on acknowledgments
  rpc StreamPayload(stream NotificationAck) returns (stream NotificationPayload);
}
